<resources>
    <string name="app_name">Car Seller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="notice">Notice</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="admin_log_in">Admin Log In</string>
    <string name="already_have_a_account_log_in">Already Have A Account? Log In.</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="full_name">Full Name</string>

    <!-- Strings Used in Admin Home Page -->
    <string name="manage_users">Manage Users</string>
    <string name="manage_books">Manage Books</string>
    <string name="manage_report">Manage Report</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="add_category">Add Category</string>
    <string name="view_result">View Result</string>
    <string name="delete_election">Delete Election</string>
    <string name="remove_category">Remove Category</string>
    <string name="manage_cars">Manage Cars</string>
    <string name="bookmarked">Book Marked</string>
    <string name="uploaded">Uploaded</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out_button">Log Out Button</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="close">Close</string>
    <string name="change_photo">Change Photo</string>
    <string name="dealer_log_in">Dealer Log In</string>
    <string name="manage_dealer">Manage Dealer</string>
    <string name="remove">Remove</string>
    <string name="category_name">Categoey Name</string>
    <string name="category">Category</string>
    <string name="chat">Chats</string>
    <string name="select_car_image">Select Car Image</string>
    <string name="price">Price</string>
    <string name="add_to_watch_list">Add to Watch List</string>
    <string name="remove_from_watch_list">Remove from Watch List</string>

</resources>